--- a/Monday_Lesson.ipynb
+++ b/Monday_Lesson.ipynb
@@ -480,18 +480,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "__init__() takes 4 positional arguments but 6 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-c2caef5d0389>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[1;34m\"The {} is {}. Its color is {}, and it has {} wheels, and runs at {} mph.\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype_of_transportation\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolor\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwheels\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mspeed\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m \u001b[0mbus1\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mBus\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"bus\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"small\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"red\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m40\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() takes 4 positional arguments but 6 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The 8 is red. Its color is small, and it has bus wheels, and runs at 40 mph.\n"
      ]
     }
    ],
@@ -503,12 +499,10 @@
     "class Physics ():\n",
     "        def __init__(self, speed):\n",
     "            self.speed=speed         \n",
-    "        def __str__(self): \n",
-    "            return \"This has a speed of {} mph\".format(self.speed)\n",
     "\n",
     "\n",
     "class Bus(Transportation, Physics):\n",
-    "    def __init__(self, wheels, color, size):\n",
+    "    def __init__(self, wheels, color, size, type_of_transportation,speed):\n",
     "        self.wheels=wheels\n",
     "        self.color=color\n",
     "        self.size=size\n",
@@ -518,7 +512,8 @@
     "    def __str__(self):\n",
     "        return \"The {} is {}. Its color is {}, and it has {} wheels, and runs at {} mph.\".format(self.type_of_transportation,self.size,self.color,self.wheels,self.speed)\n",
     "    \n",
-    "bus1= Bus(\"bus\",\"small\",\"red\",8,40)"
+    "bus1= Bus(\"bus\",\"small\",\"red\",8,40)\n",
+    "print(bus1)"
    ]
   }
  ],
